[project]
name = "graph-stuff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "apeniaziev", email = "anton.peniaziev@booking.com" }
]
requires-python = ">=3.9"
dependencies = [
    "google-adk>=1.14.0",
    "ipykernel>=6.30.1",
    "litellm>=1.77.0",
    "neo4j>=5.28.2",
    "neo4j-graphrag>=1.8.0",
    "rapidfuzz>=3.13.0",
]

[project.scripts]
graph-stuff = "graph_stuff:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
